--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
  
     <body>
         Hello World!
-<rohit.jpg">
+< imng src="rohit.jpg"Italian Trulli"
+                                     >
     </body>
 </html>
