--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  
     <body>
         Hello World!
-< imng src="rohit.jpg"Italian Trulli"
+< imng src="rohit.jpg" alt="Italian Trulli"
                                      >
     </body>
 </html>
