--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
  
     <body>
         Hello World!
-< imng src="rohit.jpg" alt="Italian Trulli"
-                                     >
+< img src="rohit.jpg" alt="Italian Trulli">
     </body>
 </html>
