--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
  
     <body>
         Hello World!
-<img src="xyz.jpg" alt="Italian Trulli">
+<img src="bobade.jpg" alt="Italian Trulli">
     </body>
 </html>
