--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
  
     <body>
-        Hello World!
+        Team India With Blue Jersy!
 <img src="bobade.jpg" alt="Italian Trulli">
     </body>
 </html>
