--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <body>
         Team India With Blue Jersy!
 <img src="bobade.jpg" alt="Italian Trulli">
+        <img src="india.jpg" alt="Italian Trulli">
     </body>
 </html>
